Fix title overflow

--- a/frontend/src/styles/ShowReview.css
+++ b/frontend/src/styles/ShowReview.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f1f7fd; /* This will set the background color for the entire page */
+  background-color: #f1f7fd;
+  /* This will set the background color for the entire page */
 }
 
 .show-review-page {
@@ -16,7 +17,7 @@ body {
   width: fit-content;
 }
 
-.restaurant-name > * > p {
+.restaurant-name>*>p {
   color: black;
   text-decoration: underline;
 }
@@ -32,6 +33,13 @@ body {
   height: 10%;
   border-radius: 8px;
   object-fit: cover;
+}
+
+.review-title {
+  color: #060606;
+  margin-right: 30px;
+  overflow-wrap: break-word;
+  width: 650px;
 }
 
 .row {
@@ -104,7 +112,7 @@ body {
   outline-offset: 0px;
 }
 
-.comment-textbox > form > textarea {
+.comment-textbox>form>textarea {
   min-height: 150px;
 }
 
@@ -202,7 +210,8 @@ body {
 }
 
 .popup-content p {
-  font-size: 20px; /* Font size for paragraphs */
+  font-size: 20px;
+  /* Font size for paragraphs */
   color: black;
 }
 
